--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               ullamco.</p>
             <p class="like">
               <button class="button2">
-                <b><i class="fa-regular fa-thumbs-up"></i>Like</b>
+                <b>Like</b>
               </button>
             </p>
             <p class="replay">
