--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               fringilla.</p>
             <p class="like">
               <button class="button2">
-                <b><i class="fa-regular fa-thumbs-up"></i>Like</b>
+                <b>Like</b>
               </button>
             </p>
             <p class="replay">
@@ -132,7 +132,7 @@
               fringilla.</p>
             <p class="like">
               <button class="button2">
-                <b><i class="fa-regular fa-thumbs-up"></i>Like</b>
+                <b>Like</b>
               </button>
             </p>
             <p class="replay">
